# Learn-RAG

./: .gitignore  README.md  STARTUP.md  run.sh  run_backend.sh  run_frontend.sh  start_backend.sh  stop_backend.sh  stop_frontend.sh
backend/: .env.example  pyproject.toml  test_openrouter.py
backend/src/agent/: app.py  graph.py  llm.py  state.py  vector_store.py
backend/src/data_collection/: README.md  config.py  demo_data.py  exporter.py  sqlite_store.py  uploader.py
backend/src/evaluation/: ragas_eval.py
backend/src/feedback/: visualizer.py
backend/src/hybrid/: __init__.py  cli.py  config.py  document_store.py  registry.py  test_ch10_11.py  test_ch6_11.py  test_phase1.py  test_phase2_strategies.py  test_phase3_intent_recall.py  test_qwen_strategies.py
backend/src/hybrid/channels/: fts.py  graph.py  vector.py
backend/src/hybrid/retrieval/: __init__.py  enrich.py  fusion.py  intent.py  multi_recall.py
backend/src/hybrid/strategies/: __init__.py  base.py  hypothetical.py  parent_child.py  standard.py  summary.py
backend/src/testset/: __init__.py  test_pipeline.py  testset_builder.py
docs/: RAG教学项目工作成果总结.md  RAG文档导入与向量化操作手册.md  SOP_HybridRAG文档上传与处理.md  test_report_ch10_11.json  意图识别数据结构与大模型调用方法.md  排查报告_向量真实性验证.md  排查报告_数据库路径分裂问题.md  排查报告_数据库路径分裂问题_v2.md  排查报告_策略与通道关系.md  数据库清单与作用说明.md  测试报告_第六章到第十一章.md  测试报告_第十章到第十一章.md  监控指标体系搭建规划.md  第二阶段-HybridRAG混合检索搭建计划.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.css
