[project]
name = "rag-teaching"
version = "0.0.1"
description = "最简单的 RAG 教学项目 - 基于 LangGraph"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain>=0.3.19",
    "openai",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.1.57",
    "langgraph-cli",
    "langgraph-api",
    "fastapi",
    "chromadb",
    "langchain-community",
    "langchain-openai",
    "pypdf",
    "sentence-transformers",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
